# cocoatree

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  genindex.html  index.html  install.html  interface_cocoatree_pymol.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html
_modules/: index.html
_sources/: index.rst.txt  install.rst.txt  sg_execution_times.rst.txt
_static/: nameko.css
akasthesia/: __init__.py  coevolution.py
auto_examples/: index.html  no_plot_coev_along_phylogeny.html  plot_example.html  plot_full_SCA_analysis.html  plot_load_msa.html  plot_map_alignments.html  plot_sca.html  plot_sca_vs_mi.html  plot_sca_with_own_metric.html  plot_sector_along_tree_and_metadata.html  plot_simple_sca.html  sg_execution_times.html
binder/: requirements.txt
cocoatree/: MSA.py  __init__.py  __params.py  _pipeline.py  _scraper.py  _version.py  cocoatree_io.py  decomposition.py  deconvolution.py  io.py  msa.py  pysca.py  randomize.py  sca_functions.py  version.py  visualization.py
datasets/: __init__.py  simulation.py
doc/: Makefile  conf.py  from_alignment_to_matrices.html  index.rst  install.rst  interface_cocoatree_pymol.rst  refs.bib  sg_execution_times.rst
examples/: ColorResidues_withScore_Pymol.pml  README.txt  __helper.py  plot_cocoatree_vs_kernelPCA.py  plot_coev_along_phylogeny.py  plot_example.py  plot_full_SCA_analysis.py  plot_load_msa.py  plot_map_alignments.py  plot_rhomboid_SCA_analysis.py  plot_sca.py  (+7 more)
(+304 files in other folders)
