[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocoatree"
version = "0.0.0a0.dev0"
description = "Awesome coevolution stuff"
readme = "README.md"
requires-python = ">=3.8,<4.0"
license = {text = "MIT"}
authors = [{name = ""}]
keywords = ["coevolution", "MSA"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers, Scientists",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = ["flake8"]
test = ["pytest"]

[project.urls]
"Bug Reports" = "https://github.com/FIXME"
"Source" = "https://github.com/FIXME/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cocoatree*"]

[tool.setuptools.package-data]
cocoatree = ["*.csv", "*.fasta", "*.gz", "*.txt", "*.pxd", "*.rst", "*.jpg", "*.css"]

[tool.flake8]
max-line-length = 79
per-file-ignores = ["__init__.py:F401"]
